[fix] Ajout flèches scroll pour version mobile

--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -290,6 +290,13 @@ img {
 		cursor: pointer;
 	}
 
+	.call-arrow
+	{
+		position: absolute;
+		bottom: 2rem;
+		left: 50%;
+	}
+
 
 
 	.TxtProjet
@@ -298,6 +305,11 @@ img {
 		font-weight: bolder;
 		font-family: 'karla-bold', 'Times New Roman', Times, serif;
 		color: #ececec;
+	}
+
+	.scrollme
+	{
+		display: none;
 	}
 
 
@@ -573,43 +585,73 @@ img {
 
 @media screen and (max-width: 576px) {
 
-	.scroll-downs {
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		margin : auto;
-		
-		width: 34px;
-		height: 55px;
-	  }
-	  .mousey {
-		width: 3px;
-		padding: 10px 15px;
-		height: 35px;
-		border: 2px solid #fff;
-		border-radius: 25px;
-		opacity: 0.75;
-		box-sizing: content-box;
-	  }
-	  .scroller
-	  {
-		  width: 3px;
-		  height: 10px;
-		  border-radius: 25%;
-		  background-color: #fff;
-		  animation-name: scroll;
-		  animation-delay: 2s;
-		  animation-duration: 2.2s;
-		  animation-timing-function: cubic-bezier(.15,.41,.69,.94);
-		  animation-iteration-count: infinite;
-		  }
-		  @keyframes scroll {
-		  0% { opacity: 0; }
-		  10% { transform: translateY(0px); opacity: 1; }
-		  100% { transform: translateY(15px); opacity: 0;}
-	  }
+	#mouse
+	{
+		display: none;
+	}
+
+	@keyframes pulsea {
+		0%, 80%, 100% { 
+			 text-shadow: 
+			 0pt 0px 0px rgba(255,255,255,0), 
+			 0pt -10pt 0px rgba(255,255,255,0), 
+			 0pt -20pt 0px rgba(255,255,255,0);
+		}
+		10% {
+			 text-shadow: 
+			 0pt 0px 0px rgba(255,255,255,0.5), 
+			 0pt -10pt 0px rgba(255,255,255,0), 
+			 0pt -20pt 0px rgba(255,255,255,0);
+		}
+		20% {
+			 text-shadow: 
+			 0pt 0px 0px rgba(255,255,255,1), 
+			 0pt -10pt 0px rgba(255,255,255,0), 
+			 0pt -20pt 0px rgba(255,255,255,0);
+		}
+		30% {
+			 text-shadow: 
+			 0pt 0px 0px rgba(255,255,255,0.5), 
+			 0pt -10pt 0px rgba(255,255,255,0), 
+			 0pt -20pt 0px rgba(255,255,255,0);
+		}
+		40% {
+			 text-shadow: 
+			 0pt 0px 0px rgba(255,255,255,0), 
+			 0pt -10pt 0px rgba(255,255,255,1), 
+			 0pt -20pt 0px rgba(255,255,255,0);
+		}
+		50% {
+			 text-shadow: 
+			 0pt 0px 0px rgba(255,255,255,0), 
+			 0pt -10pt 0px rgba(255,255,255,0), 
+			 0pt -20pt 0px rgba(255,255,255,0);
+		}
+		60% {
+			 text-shadow: 
+			 0pt 0px 0px rgba(255,255,255,0), 
+			 0pt -10pt 0px rgba(255,255,255,0), 
+			 0pt -20pt 0px rgba(255,255,255,1);
+		}
+		70% {
+			 text-shadow: 
+			 0pt 0px 0px rgba(255,255,255,0), 
+			 0pt -10pt 0px rgba(255,255,255,0), 
+			 0pt -20pt 0px rgba(255,255,255,0);
+		}
+	 }
+	 
+	 .scrollme::after{
+		 animation: pulsea 2s linear infinite;
+		 font-size:20pt;
+		 color:transparent; /*Using only shadows makes the animation easier*/
+		 font-family: FontAwesome;
+		 content:"\f106";
+		 text-shadow: 
+			 0pt 0px 0px rgba(255,255,255,1), 
+			 10pt 0px 0px rgba(255,255,255,1), 
+			 20pt 0px 0px rgba(255,255,255,1);
+	 }
 
 /* ******************************* Fin Animations scroll ******************************************** */
 	.home
@@ -655,6 +697,11 @@ img {
 		left: 50%;
 		margin-left: -140px;
 		width: 280px;
+	}
+
+	.scrollme
+	{
+		display: block;
 	}
 
 /* ******************************* Fin Home ******************************************** */
@@ -892,7 +939,6 @@ img {
 	{
 		background-image: url('../Images/mobilephonebooth.jpg');
 		background-size: cover;
-		
 	}
 }
 
